--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,187 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TherapistLLM Chat</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
-            background-color: #f4f7f6;
-            color: #333;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            min-height: 100vh;
-        }
-
-        .container {
-            background-color: #ffffff;
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            width: 100%;
-            max-width: 600px;
-            margin-bottom: 20px;
-        }
-
-        h1, h2 {
-            color: #2c3e50;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        /* --- Auth Section --- */
-        #auth-section {
-            display: none; /* Hidden by default, shown if not logged in */
-        }
-
-        #auth-section form {
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-            margin-bottom: 25px;
-        }
-
-        #auth-section input[type="email"],
-        #auth-section input[type="text"],
-        #auth-section input[type="password"] {
-            padding: 12px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            font-size: 16px;
-        }
-
-        #auth-section button {
-            padding: 12px 20px;
-            background-color: #28a745;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-            transition: background-color 0.3s ease;
-        }
-
-        #auth-section button:hover {
-            background-color: #218838;
-        }
-
-        .toggle-auth {
-            text-align: center;
-            margin-top: -10px;
-            font-size: 14px;
-            color: #555;
-            cursor: pointer;
-            text-decoration: underline;
-        }
-        .toggle-auth:hover {
-            color: #007bff;
-        }
-        .auth-status {
-            text-align: center;
-            color: red;
-            margin-bottom: 15px;
-        }
-
-        /* --- Chat Section --- */
-        #chat-section {
-            display: none; /* Hidden by default, shown when logged in */
-        }
-
-        #chat-info {
-            font-size: 0.9em;
-            color: #666;
-            margin-bottom: 10px;
-            text-align: center;
-        }
-
-        #messages {
-            border: 1px solid #e0e0e0;
-            border-radius: 6px;
-            padding: 15px;
-            height: 400px;
-            overflow-y: auto;
-            margin-bottom: 15px;
-            background-color: #fdfdfd;
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-
-        .message {
-            max-width: 80%;
-            padding: 10px 15px;
-            border-radius: 18px;
-            word-wrap: break-word;
-        }
-
-        .message.user {
-            background-color: #007bff;
-            color: white;
-            align-self: flex-end;
-            border-bottom-right-radius: 2px;
-        }
-
-        .message.assistant {
-            background-color: #e2e6ea;
-            color: #333;
-            align-self: flex-start;
-            border-bottom-left-radius: 2px;
-        }
-
-        #chat-form {
-            display: flex;
-            gap: 10px;
-        }
-
-        #chat-input {
-            flex-grow: 1;
-            padding: 12px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            font-size: 16px;
-        }
-
-        #send-button, #logout-button, #new-chat-button {
-            padding: 12px 20px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-            transition: background-color 0.3s ease;
-        }
-        #send-button:hover, #logout-button:hover, #new-chat-button:hover {
-            background-color: #0056b3;
-        }
-        #logout-button {
-            background-color: #dc3545;
-            margin-top: 20px;
-            width: 100%;
-        }
-        #logout-button:hover {
-            background-color: #c82333;
-        }
-        #new-chat-button {
-            background-color: #6c757d;
-            margin-top: 10px;
-            margin-bottom: 15px;
-        }
-        #new-chat-button:hover {
-            background-color: #5a6268;
-        }
-        .buttons-group {
-            display: flex;
-            justify-content: space-between;
-            gap: 10px;
-            margin-bottom: 10px;
-        }
-        .buttons-group button {
-            flex: 1;
-        }
-
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>TherapistLLM Chat Application</h1>
@@ -218,8 +38,7 @@
             <button id="logout-button">Logout</button>
         </div>
 
-        <div id="messages">
-            </div>
+        <div id="messages"></div>
 
         <form id="chat-form">
             <input type="text" id="chat-input" placeholder="Type your message..." required>
@@ -227,223 +46,6 @@
         </form>
     </div>
 
-    <script>
-    const API_BASE_URL = 'http://localhost:8000';
-
-    const authSection = document.getElementById('auth-section');
-    const chatSection = document.getElementById('chat-section');
-    const authTitle = document.getElementById('auth-title');
-    const authMessage = document.getElementById('auth-message');
-    const loginForm = document.getElementById('login-form');
-    const signupForm = document.getElementById('signup-form');
-    const toggleAuthMode = document.getElementById('toggle-auth-mode');
-    const userEmailDisplay = document.getElementById('user-email-display');
-    const messagesDiv = document.getElementById('messages');
-    const chatForm = document.getElementById('chat-form');
-    const chatInput = document.getElementById('chat-input');
-    const newChatButton = document.getElementById('new-chat-button');
-    const logoutButton = document.getElementById('logout-button');
-
-    let accessToken = localStorage.getItem('access_token');
-    let currentConversationId = null;
-
-    function showAuth() {
-        authSection.style.display = 'block';
-        chatSection.style.display = 'none';
-    }
-
-    function showChat(email) {
-        authSection.style.display = 'none';
-        chatSection.style.display = 'block';
-        userEmailDisplay.textContent = email;
-        messagesDiv.innerHTML = '';
-        currentConversationId = null;
-        localStorage.removeItem('current_conversation_id');
-        chatInput.focus();
-    }
-
-    function setAuthMessage(message, isError = true) {
-        authMessage.textContent = message;
-        authMessage.style.color = isError ? 'red' : 'green';
-    }
-
-    function clearAuthMessage() {
-        authMessage.textContent = '';
-    }
-
-    function appendMessage(sender, content) {
-        const msgDiv = document.createElement('div');
-        msgDiv.classList.add('message', sender);
-        msgDiv.textContent = content;
-        messagesDiv.appendChild(msgDiv);
-        messagesDiv.scrollTop = messagesDiv.scrollHeight;
-    }
-
-    toggleAuthMode.addEventListener('click', () => {
-        clearAuthMessage();
-        if (loginForm.style.display === 'none') {
-            loginForm.style.display = 'flex';
-            signupForm.style.display = 'none';
-            authTitle.textContent = 'Login';
-            toggleAuthMode.textContent = "Don't have an account? Sign Up";
-        } else {
-            loginForm.style.display = 'none';
-            signupForm.style.display = 'flex';
-            authTitle.textContent = 'Sign Up';
-            toggleAuthMode.textContent = "Already have an account? Login";
-        }
-    });
-
-    loginForm.addEventListener('submit', async (e) => {
-        e.preventDefault();
-        clearAuthMessage();
-        const email = document.getElementById('login-email').value;
-        const password = document.getElementById('login-password').value;
-
-        try {
-            const response = await fetch(`${API_BASE_URL}/auth/login`, {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ email, password })
-            });
-            const data = await response.json();
-
-            if (response.ok) {
-                accessToken = data.access_token;
-                localStorage.setItem('access_token', accessToken);
-                localStorage.setItem('user_email_for_display', email);
-                setAuthMessage('Login successful!', false);
-                setTimeout(() => showChat(email), 500);
-            } else {
-                setAuthMessage(data.detail || 'Login failed.');
-            }
-        } catch (error) {
-            console.error('Login error:', error);
-            setAuthMessage('Network error or server unavailable.');
-        }
-    });
-
-    signupForm.addEventListener('submit', async (e) => {
-        e.preventDefault();
-        clearAuthMessage();
-        const email = document.getElementById('signup-email').value;
-        const username = document.getElementById('signup-username').value;
-        const password = document.getElementById('signup-password').value;
-        const confirm_password = document.getElementById('signup-confirm-password').value;
-
-        if (password !== confirm_password) {
-            setAuthMessage("Passwords do not match.");
-            return;
-        }
-
-        try {
-            const response = await fetch(`${API_BASE_URL}/auth/signup`, {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ email, username, password, confirm_password })
-            });
-            const data = await response.json();
-
-            if (response.ok) {
-                setAuthMessage(data.msg || 'Signup successful! Check your email to verify.', false);
-                toggleAuthMode.click();
-            } else {
-                setAuthMessage(data.detail || 'Signup failed.');
-            }
-        } catch (error) {
-            console.error('Signup error:', error);
-            setAuthMessage('Network error or server unavailable.');
-        }
-    });
-
-    logoutButton.addEventListener('click', () => {
-        accessToken = null;
-        localStorage.removeItem('access_token');
-        localStorage.removeItem('current_conversation_id');
-        localStorage.removeItem('user_email_for_display');
-        currentConversationId = null;
-        showAuth();
-        setAuthMessage('You have been logged out.', false);
-    });
-
-    chatForm.addEventListener('submit', async (e) => {
-        e.preventDefault();
-        const query = chatInput.value.trim();
-        if (!query) return;
-
-        appendMessage('user', query);
-        chatInput.value = '';
-
-        try {
-            const requestBody = { query: query };
-            if (currentConversationId) {
-                requestBody.conversation_id = currentConversationId;
-            }
-
-            const response = await fetch(`${API_BASE_URL}/chat/`, {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                    'Authorization': `Bearer ${accessToken}`
-                },
-                body: JSON.stringify(requestBody)
-            });
-
-            if (!response.ok) {
-                const errorData = await response.json();
-                appendMessage('assistant', `Error: ${errorData.detail || 'Something went wrong.'}`);
-                return;
-            }
-
-            const conversationIdHeader = response.headers.get("X-Conversation-ID");
-            if (conversationIdHeader) {
-                currentConversationId = conversationIdHeader;
-                localStorage.setItem('current_conversation_id', currentConversationId);
-            }
-
-            const reader = response.body.getReader();
-            const decoder = new TextDecoder('utf-8');
-            let result = '';
-            appendMessage('assistant', '');
-
-            while (true) {
-                const { done, value } = await reader.read();
-                if (done) break;
-                const chunk = decoder.decode(value, { stream: true });
-                result += chunk;
-                const lastMsg = document.querySelector('.message.assistant:last-child');
-                if (lastMsg) lastMsg.textContent = result;
-            }
-
-        } catch (error) {
-            console.error('Chat error:', error);
-            appendMessage('assistant', 'Network error or unable to connect to the LLM.');
-        }
-    });
-
-    newChatButton.addEventListener('click', () => {
-        showChat(userEmailDisplay.textContent);
-        setAuthMessage('New chat started.', false);
-        setTimeout(() => clearAuthMessage(), 3000);
-    });
-
-    function init() {
-        if (accessToken) {
-            const storedEmail = localStorage.getItem('user_email_for_display');
-            if (storedEmail) {
-                showChat(storedEmail);
-                currentConversationId = localStorage.getItem('current_conversation_id');
-            } else {
-                showAuth();
-                setAuthMessage('Please log in.', true);
-            }
-        } else {
-            showAuth();
-        }
-    }
-
-    init();
-</script>
-
+    <script src="app.js"></script>
 </body>
 </html>
